<resources>
    <string name="app_name">Breathe Light</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Breathe Light</string>
    <string name="nav_header_subtitle">Fall asleep faster and easier</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="communicate_header">Communicate</string>



    <string name="menu_home">Breathe Light</string>
    <string name="menu_about">About</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>

    <string-array name="time_array">
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
    </string-array>

    <string name="duration_header">Duration</string>
    <string name="starting_rhythm_header">Starting Breaths/Min</string>
    <string name="ending_rhythm_header">Target Breaths/Min</string>
    <string name="colour_picker_header">Light Color</string>
    <string name="colour_picker_desc">Light Colour Picker Button</string>
    <string name="start_button_text">Start</string>

    <string name="colour_picker_button_yellow_desc">Yellow Colour Picker Button</string>
    <string name="colour_picker_button_white_desc">White Colour Picker Button</string>
    <string name="colour_picker_button_blue_desc">Blue Colour Picker Button</string>
    <string name="colour_picker_button_green_desc">Green Colour Picker Button</string>
    <string name="colour_picker_button_red_desc">Red Colour Picker Button</string>
    <string name="colour_picker_button_purple_desc">Purple Colour Picker Button</string>

    <string name="pulsing_light_description">Coloured background which changes from visible to invisible, and back again, to breathing rhythm</string>
    <string name="stop_button_text">STOP</string>
</resources>
